--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
     "stripe": "6.28.0"
   },
   "devDependencies": {
